# furry.cafe

./: .env  .env.example  .env.travis  .gitignore  .travis.yml  Cargo.toml  INSTALLATION.md  README.md
assets/: application.css  application.css.map  application.min.css  application.min.css.map
config/: log4rs.yaml
migrations/20160812102806_create_user_table/: down.sql  up.sql
migrations/20160812140601_create_session_table/: up.sql
migrations/20160815132525_create_role_table/: down.sql  up.sql
migrations/20160817140813_create_user_profiles/: down.sql  up.sql
migrations/20160818160820_create_images/: up.sql
migrations/20160818161254_add_image_to_user/: down.sql  up.sql
migrations/20160822154018_create_submissions/: down.sql  up.sql
migrations/20160830111642_add_banner_to_user_profile/: down.sql  up.sql
migrations/20160830115042_add_size_to_images/: down.sql  up.sql
migrations/20160919163511_add_invites/: up.sql
migrations/20160927194842_add_parent_id_to_images/: down.sql  up.sql
migrations/20160928161617_add_publish_date_to_submission/: down.sql  up.sql
migrations/20160928161904_add_visibility_to_submissions/: down.sql  up.sql
migrations/20161030183945_add_nullable_images_to_submissions/: down.sql  up.sql
migrations/20161105115950_add_wanted_size_to_images/: down.sql  up.sql
migrations/20161106150031_add_format_to_image/: down.sql  up.sql
migrations/20161207202028_create_unique_codes/: down.sql  up.sql
src/: database.rs  error.rs  helper.rs  logger.rs  macros.rs  main.rs  middleware.rs
src/controllers/: about.rs  invite.rs  login.rs  mod.rs  password_reset.rs  root.rs  submission.rs  user.rs  user_profile.rs
src/middleware/: authentication.rs  authorization.rs  errorhandler.rs  mod.rs
src/middleware/authorization/: authorizer.rs  has_role.rs  is_owner.rs  logged_in.rs  mod.rs  same_user_auth.rs  same_user_auth_as.rs
src/models/: filter_settings.rs  image.rs  invite.rs  mod.rs  session.rs  submission.rs  unique_code.rs  user.rs  user_profile.rs  user_role.rs
src/views/: invite.rs  login.rs  markdown.rs  mod.rs  password_reset.rs  submission.rs  user.rs  user_profile.rs
src/views/components/: button.rs  column.rs  form.rs  image.rs  mod.rs  navbar.rs  user.rs
src/views/layout/: mod.rs
src/views/shared/: mod.rs
src_assets/: _buttons.scss  _general.scss  _mixins.scss  _navbar.scss  _submission.scss  _user.scss  _utilities.scss  _variables.scss  application.min.scss  application.scss
src_assets/mixins/: _nosel.scss
