[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
name = "furry_cafe"
version = "0.1.0"

[dependencies]
bcrypt = "0.1.1"
diesel = "0.8"
iron = "0.4"
lazy_static = "0.2.1"
dotenv = "0.8.0"
dotenv_macros = "0.9.0"
log = "0.3.6"
logger = "0.1"
maud_macros = "0.14"
maud-pulldown-cmark = "0.5"
mount = "0.2"
params = "0.5"
pulldown-cmark = "0.0.8"
quick-error = "1.1.0"
r2d2 = "0.7.0"
r2d2-diesel = "0.8"
rand = "0.3"
router = "0.4"
rustc-serialize = "0.3.19"
time = "0.1.35"

[dependencies.diesel_codegen]
default-features = false
features = ["postgres", "dotenv"]
version = "0.8"

[dependencies.log4rs]
version = "0.5"

[dependencies.maud]
features = ["iron"]
version = "0.14"

[dependencies.staticfile]
features = ["cache"]
version = "0.3.0"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image.git"
rev = "7a654d5bfb337f428264d4e78901436e6c3d25c8"

[replace."dotenv_codegen:0.9.3"]
git = "https://github.com/slapresta/rust-dotenv.git"
rev = "444441a02e4703c30929d7a68358842bf55ec612"

[dependencies.iron-login]
git = "https://github.com/untitaker/iron-login.git"
rev = "98e79797da3830e1cf4d00851f5e344a54d0b750"

[dependencies.lettre]
git = "https://github.com/lettre/lettre.git"
rev = "90b00ae4ffc8828041160dc4cb579d53f4173c8e"
